# mist-datasource

./: .env.example  .env.windows.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/references/: qmt-provider-alignment.md  tdx-openapi-summary.md  tdx-openapi.json  tdxquant-interface-coverage.md  tdxquant-live-datasource-smoke.md  tdxquant-official-page-capture-2026-06-27.md
qmt/: main.py
qmt/routes/: ws.py
qmt/services/: qmt_service.py
scripts/: deploy_windows.ps1  export_openapi.py  preflight-sdk.ps1  run-runtime-checks.ps1  service-common.ps1  service-runner.ps1  start_all.sh  test_windows_scripts.ps1  windows-common.ps1
scripts/winsw/: install-tdx-datasource.ps1  mist-tdx-datasource.xml  test-tdx-datasource.ps1  uninstall-tdx-datasource.ps1
src/adapter/: __init__.py  base.py
src/core/: config.py
src/datasource/: __init__.py  capabilities.py  contracts.py  tdx_bridge.py  tdx_collector.py  tdx_http_client.py  tdx_models.py  tdx_normalization.py  tdx_provider.py  tdx_subscription.py
src/ws/: manager.py  protocol.py
tdx/: main.py
tdx/routes/: client.py  dependencies.py  etf.py  financial.py  market.py  sector.py  stock.py  v1.py  value.py  ws.py
tdx/services/: tdx_service.py
tests/: conftest.py
tests/integration/: test_qmt_service.py  test_qmt_ws.py  test_tdx_routes.py  test_tdx_v1.py  test_tdx_ws.py
tests/unit/: test_config.py  test_dependency_metadata.py  test_qmt_datasource_alignment.py  test_qmt_runtime_safety.py  test_repository_hygiene.py  test_tdx_adapter.py  test_tdx_adapter_runtime_safety.py  (+9 more)
(+4 files in other folders)
